<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

   <TableLayout
                android:id="@+id/tlInfoSeson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp" >

                <TableRow
                    android:id="@+id/tableRow0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/equinox"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/tvSpring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spring" />

                    <TextView
                        android:id="@+id/tvSpringRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/tvSummer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/summer" />

                    <TextView
                        android:id="@+id/tvSummerRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/tvAutumn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/autumn" />

                    <TextView
                        android:id="@+id/tvAutumnRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/tvWinter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/winter" />

                    <TextView
                        android:id="@+id/tvWinterRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:text="TextView" />
                </TableRow>
            </TableLayout>

</LinearLayout>