<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

   <TableLayout
                android:id="@+id/tlInfoEaster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp" >

                <TableRow
                    android:id="@+id/tableRow0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/easter"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/tvEasterOrthodox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/easter_orthodox" />

                    <TextView
                        android:id="@+id/tvEasterOrthodoxRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tvEasterCatholic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/easter_сatholic" />

                    <TextView
                        android:id="@+id/tvEasterCatholicRes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="TextView" />
                </TableRow>
            </TableLayout>

</LinearLayout>